Fix candidate seeds query
Force to regenerate GlobalMarkByComplexitivityGraphic

Fix WCAG report that not update result when OAW verification check failed not correpond to WCAG verification


Former-commit-id: 0fd2ca8cc4fda8a3ab5abb68a6f2afb300e27096

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2537,6 +2537,10 @@ observatory.graphics.level.AA                                                 = 
 observatory.graphics.level.NV                                                 = No V\u00E1lido
 observatory.graphics.level.Parcial                                            = No V\u00E1lido
 observatory.servicio.diagnostico.url                                          = http://administracionelectronica.gob.es/comunidades/accesibilidad
+observatory.status.no.results.title                                           = Semillas procesadas sin resultados
+observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
+observatory.status.summary.seed.processed                                     = Semillas procesadas
+observatory.status.summary.seed.results                                       = Semillas procesadas con resultados
 
 pagina.error   = Error
 pagina.exito   = \u00C9xito
