--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -2733,17 +2733,17 @@ observatory.status.last.total.url.last.end                                    = 
 observatory.status.no.results.caption                                         = Informaci\u00F3n de an\u00E1lisis sin resultados
 observatory.status.no.results.name                                            = Nombre
 observatory.status.no.results.relaunch                                        = Relanzar
-observatory.status.no.results.title                                           = Portales sin resultados
+observatory.status.no.results.title                                           = Semillas procesadas sin resultados
 observatory.status.pending.caption                                            = Informaci\u00F3n de portales sin analizar a\u00FAn
 observatory.status.pending.name                                               = Nombre\n
-observatory.status.pending.title                                              = Portales sin analizar a\u00FAn
+observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
 observatory.status.relaunh                                                    = Relanzar esta iteraci\u00F3n del observarorio
 observatory.status.results                                                    = Resultados
 observatory.status.status                                                     = Estado
 observatory.status.summary                                                    = Resumen de la ejecuci\u00F3n del observatorio
 observatory.status.summary.caption                                            = Informaci\u00F3n del an\u00E1lisis en curso
-observatory.status.summary.seed.processed                                     = Total de semillas procesadas
-observatory.status.summary.seed.results                                       = Total de semillas procesada con resultados
+observatory.status.summary.seed.processed                                     = Semillas procesadas
+observatory.status.summary.seed.results                                       = Semillas procesadas con resultados
 observatory.status.summary.seed.total                                         = Total de semillas
 observatory.status.summary.time.avg                                           = Tiempo medio
 observatory.status.summary.time.end                                           = Tiempo estimado fin
