Add message on status page
Former-commit-id: 49465b2e53105f1b915007aac88827e1e184ae52

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2538,6 +2538,9 @@ observatory.graphics.level.NV                                                 = 
 observatory.graphics.level.Parcial                                            = No V\u00E1lido
 observatory.servicio.diagnostico.url                                          = http://administracionelectronica.gob.es/comunidades/accesibilidad
 observatory.status.no.results.title                                           = Semillas procesadas sin resultados
+observatory.status.notes.info                                                 = Cuando se a\u00F1ade una semilla manualmente durante la ejecuci\u00F3n de la iteraci\u00F3n o una vez finalizada la iteraci\u00F3n, se a\u00F1ade a la tabla de "Semillas procesadas sin resultados"; desde esta tabla se puede lanzar/ejecutar la semilla a\u00F1adida.
+observatory.status.notes.running                                              = Total semillas = Semilas procesadas + Semillas sin procesar a\u00FAn
+observatory.status.notes.title                                                = Notas:
 observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
 observatory.status.summary.seed.processed                                     = Semillas procesadas
 observatory.status.summary.seed.results                                       = Semillas procesadas con resultados
