--- a/wcagem-tool/wcag-em-report-tool/app/locale/ES/audit.json
+++ b/wcagem-tool/wcag-em-report-tool/app/locale/ES/audit.json
@@ -7,14 +7,14 @@
     "BTN_UNCOMPLETE_SELECTED": "Marcar el conjunto seleccionado como pendiente",
     "CLICK_TO_DELETE": "Haga clic para eliminar",
     "FILTER": "Mostrar",
-    "FILTER_NEW_IN_WCAG21": "Añadido en WCAG 2.1",
-    "HD_CRITERIA": "Criterios de éxito para evaluar",
-    "HD_SAMPLE_SELECT": "Muestra a evaluar",
-    "HOW_TO": "Cómo conocer",
-    "INF_AUDIT_CRITERIA": "Esta sección enumera los criterios de éxito del WCAG 2. Utilice el filtro para mostrar u ocultar los criterios de éxito de los diferentes niveles (A, AA y AAA). Puede seleccionar los resultados como: 'No comprobado', 'Aprobado', 'Fallido', 'No presente' y 'No se puede saber'; y puede proporcionar detalles, comentarios u otras observaciones realizadas durante la evaluación en el cuadro de texto adjunto.",
-    "INF_AUDIT_SAMPLE": "Esta sección enumera las páginas web que seleccionó en el paso anterior. Las páginas web que se comprueban en esta sección se enumeran cuando se activa 'Mostrar páginas web para introducir resultados individuales' en la sección 'Criterios de éxito para evaluar'. Puedes mostrar una página web individual que estés evaluando, o mostrar varias páginas web al mismo tiempo. <br> El icono de la cadena abre la página web en una ventana separada del navegador.",
+    "FILTER_NEW_IN_WCAG21": "Añadidas en WCAG 2.1",
+    "HD_CRITERIA": "Criterios de conformidad a revisar",
+    "HD_SAMPLE_SELECT": "Muestra a revisar",
+    "HOW_TO": "Cómo cumplir el criterio",
+    "INF_AUDIT_CRITERIA": "Esta sección enumera los criterios de conformidad de la WCAG 2.1. Utilice el filtro para mostrar u ocultar los criterios de conformidad de los diferentes niveles (A, AA y AAA). Puede seleccionar los resultados como: 'No Testeado', 'Pasa', 'Falla', 'No Aplica' y 'No Decide'; y puede proporcionar detalles, comentarios u otras observaciones realizadas durante la revisión, en el cuadro de texto adjunto.",
+    "INF_AUDIT_SAMPLE": "Esta sección enumera las páginas web que seleccionó en el paso anterior. Las páginas web que se comprueban en esta sección se enumeran cuando se activa 'Mostrar páginas web para introducir resultados individuales' en la sección 'Criterios de conformidad a revisar'. Puede mostrar una página web individual que esté evaluando o mostrar varias páginas web al mismo tiempo. <br> El icono de la cadena abre la página web en una ventana separada del navegador.",
     "INTRO_0": "",
-    "INTRO": "Registre el resultado de la evaluación de las páginas web seleccionadas en el paso anterior. Comparar los resultados entre la página estructurada y las páginas seleccionadas al azar, y si es necesario, ajustar la muestra seleccionada en el paso anterior. Se proporciona más orientación sobre este paso en <a href={{link_em_4}}>WCAG-EM Paso 4: Auditar la muestra seleccionada</a>. <br> <strong>Nota:</strong> Para cada criterio de éxito de WCAG 2, puede introducir resultados para páginas web individuales. Para introducir resultados individuales, seleccione la(s) página(s) web bajo 'Muestra a Evaluar' (en la columna de la izquierda); luego bajo los criterios específicos de éxito, seleccione 'Mostrar páginas web para introducir resultados individuales'.",
+    "INTRO": "Registre el resultado de la evaluación de las páginas web seleccionadas en el paso anterior. Compare los resultados entre la página estructurada y las páginas seleccionadas al azar, y si es necesario, ajuste la muestra seleccionada en el paso anterior. Se proporciona más información sobre este paso en <a href={{link_em_4}}>WCAG-EM Paso 4: Auditar la muestra seleccionada</a>. <br> <strong>Nota:</strong> Puede introducir los resultados de cada página web individualmente para cada uno de los criterios de conformidad de WCAG 2.1. Para poder introducirlos, seleccione la(s) página(s) web debajo de 'Muestra a Evaluar' (en la columna de la izquierda); luego bajo los criterios de conformidad específicos, seleccione 'Mostrar páginas web para introducir resultados individuales'.",
     "LABEL_OUTCOME": "Resultado",
     "LABEL_PAGE_HANDLE": "Nombre corto de la página",
     "NO_PAGE_SELECTED": "No hay páginas seleccionadas en la muestra para evaluar",
@@ -25,9 +25,9 @@
     "RESULTS_FOR": "Resultados para",
     "SAMPLE_FINDINGS": "Los resultados de toda la muestra",
     "SELECT_ALL": "Seleccione todas las páginas web",
-    "TESTED": "Probado",
+    "TESTED": "Testeado",
     "TITLE": "Paso 4: Auditar la muestra seleccionada",
-    "UNDERSTAND": "Comprensión",
-    "UNTESTED": "{{critCount}} sin probar",
+    "UNDERSTAND": "Comprender el criterio",
+    "UNTESTED": "{{critCount}} No Testeado",
     "LABEL_DESCR": "Descripción"
 }
