--- a/wcagem-tool/wcag-em-report-tool/app/locale/ES/common.json
+++ b/wcagem-tool/wcag-em-report-tool/app/locale/ES/common.json
@@ -1,6 +1,6 @@
 {
-    "BROWSER_NOT_SUPPORTED": "El navegador que está usando no soporta algunas funciones, como guardar y cargar informes. Puede seguir utilizando la Herramienta de informes con una funcionalidad limitada. Actualice o utilice un navegador web diferente para utilizar todas las funciones de esta herramienta de informes.",
-    "WARNING_BEFORE_UNLOAD": "Los datos que introdujo no se guardan automáticamente. Se perderán si cierras esta ventana del navegador. Utilice el enlace 'Guardar' (Ctrl + S o ⌘ S) que se encuentra en la parte superior de todas las páginas para guardar sus datos en un archivo localmente en su ordenador, y volver a cargarlo más tarde para seguir trabajando en él.",
+    "BROWSER_NOT_SUPPORTED": "El navegador que está usando no soporta algunas funciones, como guardar y cargar informes. Podrá seguir utilizando la Herramienta de generación de informes de accesibilidad pero con una funcionalidad limitada. Actualice su navegador web o utilice uno diferente para poder utilizar todas las funcionalidades de esta herramienta.",
+    "WARNING_BEFORE_UNLOAD": "Los datos que ha introducido no se guardan de manera automática. Si cierra esta ventana del navegador se perderán. Utilice el enlace 'Guardar' (Ctrl + S o ⌘ S) que se encuentra en la parte superior de todas las páginas para guardar sus datos en un archivo local (en su ordenador), y así, continuar más tarde. Para ello, cuando quiera seguir trabajando, deberá pinchar en el enlace 'Abrir' y seleccionar el archivo para volver a cargarlo.",
     "MORE_INFO": "Para más información, véase <a href={{url}}>{{name}}</a>.",
     "HIDE_MESSAGE": "Ocultar mensaje",
     "BTN_INFO": "Información expandida",
