--- a/wcagem-tool/wcag-em-report-tool/app/locale/ES/earl.json
+++ b/wcagem-tool/wcag-em-report-tool/app/locale/ES/earl.json
@@ -1,12 +1,12 @@
 {
     "PASSED": "Pasa",
     "FAILED": "Falla",
-    "CANT_TELL": "No decide",
-    "CANTTELL": "No decide",
-    "NOT_PRESENT": "No aplica",
-    "INAPPLICABLE": "No aplica",
-    "NOT_CHECKED": "No testeado",
+    "CANT_TELL": "No Decide",
+    "CANTTELL": "No Decide",
+    "NOT_PRESENT": "No Aplica",
+    "INAPPLICABLE": "No Aplica",
+    "NOT_CHECKED": "No Testeado",
     "LEVEL_A": "Nivel A",
     "LEVEL_AA": "Nivel AA",
-    "LEVEL_AAA": "Nivel AAA"
+	"LEVEL_AAA": "Nivel AAA"
 }
