--- a/wcagem-tool/wcag-em-report-tool/app/locale/ES/scope.json
+++ b/wcagem-tool/wcag-em-report-tool/app/locale/ES/scope.json
@@ -1,26 +1,26 @@
 {
-    "TITLE": "Paso 1: Definir el alcance de la evaluación",
-    "INTRO": "Definir los parámetros generales y el alcance de la evaluación. Lo ideal es que esto se haga con la persona que encargó la evaluación (que puede o no ser el propietario del sitio web), para garantizar las expectativas comunes sobre el alcance de la evaluación. Se ofrece más orientación sobre este paso en <a href={{link_step1}}>WCAG-EM Paso 1: Definir el alcance de la evaluación</a>.",
+    "TITLE": "Paso 1: Definir el alcance de la revisión",
+    "INTRO": "Definir los parámetros generales y el alcance de la revisión. Precisar si hay alguna parte o partes del sitio web que NO se van a analizar por quedar fuera del ámbito. Algunos casos podrían ser: cuando hay páginas, contenidos o documentos que están fuera del ámbito del RD 1112/2018, como por ejemplo, habría que indicar que los documentos PDF localizados en XXX no se analizan porque fueron publicados antes de la entrada en vigor del RD; cuando diferentes sitios web de un organismo tienen urls de la siguiente forma: URL del sitio web 1 'http://www.xxxxxx/sitioweb1/inicio.html', URL del sitio web 2  'http://www.xxxxx/sitioweb2/inicio.html' si el informe es del Sitio web 1, solo se analizarán las páginas que hay dentro del directorio '/sitioweb1/' porque las que están fuera de '/sitioweb1/' pertenecen a otro sitio web que no se está analizando en este informe. Se ofrece más información sobre este paso en <a href={{link_step1}}>WCAG-EM Paso 1: Definir el alcance de la revisión</a>.",
     "LABEL_SITE_NAME": "Nombre del sitio web",
-    "INF_SITE_NAME": "Proporcione un nombre para el sitio web que le gustaría evaluar. Por ejemplo:<br> 'Sitio web público de la organización del ejemplo'<br> 'Tienda web de la empresa del ejemplo'<br> 'Intranet de la universidad del ejemplo'",
+    "INF_SITE_NAME": "Proporcione un nombre para el sitio web que va a revisar. Por ejemplo:<br> 'Sitio web público del Organismo Ejemplo'<br> 'Sede electrónica del Organismo Ejemplo'<br> 'Intranet de la Universidad Ejemplo'",
     "LABEL_SITE_SCOPE": "Alcance del sitio web",
-    "INF_SITE_SCOPE_0": "Definir el alcance del sitio web, para que quede claro qué páginas web se incluyen en la evaluación. Por ejemplo:",
-    "INF_SITE_SCOPE_LI0": "'Todo el contenido web del sitio web público de Example Org. ubicado en http://www.example.org'",
-    "INF_SITE_SCOPE_LI1": "Todo el contenido de la tienda online de Example Org. ubicada en http://www.example.org/shop/",
-    "INF_SITE_SCOPE_LI2": "'Todo el contenido web de la versión móvil del sitio web público de Example Org. situado en http://m.example.org",
+    "INF_SITE_SCOPE_0": "Definir el alcance del sitio web, para que quede claro qué páginas web se incluyen en la revisión. Por ejemplo:",
+    "INF_SITE_SCOPE_LI0": "'Todo el contenido del sitio web público Ejemplo, ubicado en http://www.ejemplo.org'",
+    "INF_SITE_SCOPE_LI1": "Todo el contenido de la sede electrónica Ejemplo, ubicada en http://www.ejemplo.org/sede/",
+    "INF_SITE_SCOPE_LI2": "'Todo el contenido de la versión móvil del sitio web público Ejemplo, situado en http://m.ejemplo.org",
     "INF_SITE_SCOPE_1": "WCAG-EM Paso 1.a: Definir el alcance del sitio web",
     "LABEL_WCAG_VERSION": "Versión WCAG",
-    "INFO_WCAG_VERSION" : "Seleccione la versión WCAG a utilizar. Versión 2.1 (por defecto) o 2.0",
-    "WCAG21": "WCAG 2.1",
+    "INFO_WCAG_VERSION" : "Seleccione la versión WCAG a utilizar.",
     "WCAG20": "WCAG 2.0",
-    "LABEL_CONFORMANCE_TGT": "Objetivo de conformidad",
-    "INF_CONF_TGT": "Seleccione un nivel de conformidad con el WCAG 2 ('A', 'AA' o 'AAA') para la evaluación. Para más información, ver <a href={{link_em_1b}}>WCAG-EM Paso 1.b: Definir el Objetivo de Conformidad</a>. Esta selección determina qué filtros de nivel de conformidad están activos por defecto en el 'paso 4: Auditar la muestra'.",
-    "LABEL_SUPPORT_BASE": "Línea base de soporte de accesibilidad",
-    "INF_SUPPORT_BASE": "Definir los navegadores web, las tecnologías de asistencia y otros <a href={{link_user_agent}}>agentes de usuario</a> que serán <a href={{link_access_supp}}>accesibilidad soportada</a> por el sitio web. Por ejemplo, 'Internet Explorer (IE) con JAWS', 'FireFox con NVDA', y 'Apple con VoiceOver' podrían ser definiciones básicas. Para más información, ver <a href={{link_em_step1c}}>WCAG-EM Paso 1.c: Definir una línea base de soporte de accesibilidad</a>.",
+    "WCAG21": "UNE-EN 301549 : 2019 - AA WCAG 2.1 (excluyendo el contenido excluido por el RD 1112/2018)",
+    "LABEL_CONFORMANCE_TGT": "Nivel de conformidad a analizar",
+    "INF_CONF_TGT": "Seleccione un nivel de conformidad para la evaluación ('A', 'AA' o 'AAA' de las WCAG seleccionada). Recuerde que la norma española UNE-EN 301549:20195 'Requisitos de accesibilidad para productos y servicios TIC' (traducción al español de la norma EN 301 549 V2.1.2 (2018-08) 'Requisitos de accesibilidad para los productos y servicios de las TIC') es la norma armonizada declarada por la Comisión Europea en la Decisión de Ejecución (UE) 2018/2048. Esta norma, alineada con las WCAG 2.1 del W3C, exige un nivel de cumplimiento 'AA'. Por ello, si decide elegir un nivel de conformidad 'AAA' los criterios de conformidad asociados a este nivel, no serán exportados en los ficheros ODS (LibreOffice) ni XLSX (Microsoft Excel). Si, en cambio, en los fichero HTML y JSON. Para más información, visite <a href={{link_em_1b}}>WCAG-EM Paso 1.b: Definir el Objetivo de Conformidad</a>. Esta selección determina qué filtros de nivel de conformidad están activos por defecto en el 'paso 4: Auditar la muestra'.",
+    "LABEL_SUPPORT_BASE": "Soporte de accesibilidad mínimo",
+    "INF_SUPPORT_BASE": "Definir el conjunto mínimo de combinaciones de sistemas operativos, navegadores web, productos de apoyo y otras <a href={{link_user_agent}}>aplicaciones de usuario</a> para los que la <a href={{link_access_supp}}>la accesibilidad</a> del sitio web está soportada,Ee decir, aquellos entornos en los que se espera que el sitio web funcione correctamente y con un adecuado soporte de accesibilidad. En concreto indicar con qué sistema operativo y navegador se ha realizado la revisión (incluyendo la versión exacta) y si, una vez completada la revisión o en paralelo, se ha probado el sitio web con algún producto de apoyo, como NVDA, Jaws, VoiceOver..., por ejemplo, 'Internet Explorer (IE) con JAWS', 'FireFox con NVDA', y 'Apple con VoiceOver' podrían ser definiciones básicas. Para más información, visite <a href={{link_em_step1c}}>WCAG-EM Paso 1.c: Definir una línea base de soporte de accesibilidad</a>.",
     "LABEL_EXTRA_REQUIREMENTS": "Requisitos adicionales de evaluación",
     "INF_EXTRA_REQUIREMENTS_0": "Definir cualquier requisito de evaluación adicional. Por ejemplo:",
-    "INF_EXTRA_REQUIREMENTS_LI0": "'El informe incluirá una lista de todos los errores identificados por el evaluador, en lugar de sólo ejemplos'",
-    "INF_EXTRA_REQUIREMENTS_LI1": "El informe incluirá una descripción del problema y sugerencias de reparación para cualquier error listado",
-    "INF_EXTRA_REQUIREMENTS_LI2": "'La evaluación abarcará todas las páginas web y el contenido del sitio web, en lugar de sólo una muestra seleccionada'",
+    "INF_EXTRA_REQUIREMENTS_LI0": "El informe incluirá una lista de todos los errores identificados por el evaluador, en lugar de incluir solo ejemplos.",
+    "INF_EXTRA_REQUIREMENTS_LI1": "El informe incluirá una descripción del problema y sugerencias para la resolución de cualquier error mostrado.",
+    "INF_EXTRA_REQUIREMENTS_LI2": "La evaluación abarcará todas las páginas web y el contenido del sitio web, en lugar de solo una muestra seleccionada.",
     "INF_EXTRA_REQUIREMENTS_1": "WCAG-EM Paso 1.d: Definir los requisitos de evaluación adicionales"
 }
