Update text and UX improvements

--- a/wcagem-tool/wcag-em-report-tool/app/locale/ES/sample.json
+++ b/wcagem-tool/wcag-em-report-tool/app/locale/ES/sample.json
@@ -1,14 +1,14 @@
 {
     "TITLE": "Paso 3: Seleccionar una muestra representativa",
-    "INTRO": "Seleccionar las páginas web para la evaluación. Las notas que tomó durante la exploración en el paso anterior se proporcionan aquí, para ayudarle a seleccionar las páginas web. Asegúrese de que las páginas web seleccionadas son representativas del sitio web objetivo. Más orientación sobre este paso se proporciona en <a href={{link_em_3}}>WCAG-EM Paso 3: Seleccionar una muestra representativa</a>.",
+    "INTRO": "Seleccionar las páginas web para su revisión. Las notas que añadió durante la exploración, en el paso anterior, se proporcionan aquí para ayudarle a seleccionar las páginas web. Asegúrese de que las páginas web seleccionadas son representativas del sitio web objetivo. Para más información vaya a <a href={{link_em_3}}>WCAG-EM Paso 3: Seleccionar una muestra representativa</a>.",
     "HD_STRUCT_SAMPLE": "Muestra estructurada",
     "HD_ESSENT_FUNC": "Funcionalidad esencial (notas opcionales del paso anterior)",
     "HD_VARIETY_PAGE_TYPES": "Variedad de tipos de páginas web (notas opcionales del paso anterior)",
     "HD_STRUCT_SAMPLE_SUB": "Páginas web de muestra estructuradas",
-    "INF_STRUCT_SAMPLE": "Seleccionar páginas web que reflejen todas las (1) páginas web comunes identificadas, (2) funcionalidad esencial, (3) tipos de páginas web, (4) tecnologías web en las que se ha confiado y (5) otras páginas web relevantes. Para más información, ver <a href={{link_em_3a}}>WCAG-EM Paso 3.a: Incluir una muestra estructurada</a>.<br> Nota: Las 'páginas web' incluyen diferentes 'estados de páginas web'; ver definición de <a href={{link_em_state}}>estados de páginas web</a>.",
+    "INF_STRUCT_SAMPLE": "Seleccione páginas web que sean lo más representativas posibles de su sitio web y que incluyan páginas web comunes identificadas, páginas web con alguna funcionalidad esencial, páginas web tipo, páginas web en las que se empleen diferentes tecnologías web en las que haya confiado y otras páginas web relevantes. Recuerde que en el tercer apartado del anexo I de la <a href=&quot;https://eur-lex.europa.eu/legal-content/ES/ALL/?uri=CELEX:32018D1524&quot;>Decisión de Ejecución (UE) 2018/1524</a> se enumeran las páginas web mínimas que deben formar parte de la muestra en las revisiones en profundidad, por ser éstas obligatorias (página de inicio, inicio de sesión, mapa web, contacto, ayuda, información legal, servicio/proceso, búsqueda, declaración de accesibilidad, mecanismo de comunicación, documento descargable, página tipo, otras páginas y aleatorias). Para más información, acceda a <a href={{link_em_3a}}>WCAG-EM Paso 3.a: Incluir una muestra estructurada</a>.<br><strong>Nota:</strong> Se recomienda <strong>no superar las 35 páginas</strong>, cantidad más que suficiente para realizar un muestreo de páginas representativo. Si, aun así, decide añadir más páginas a la muestra, recuerde que dichas páginas no serán añadidas al informe si decide exportarlo como ODS o XLSX. Sí se incluirán en los demás casos.<br><strong>Nota:</strong> Las 'páginas web' incluyen diferentes 'estados de páginas web'; ver definición de <a href={{link_em_state}}>estados de páginas web</a>.",
     "HD_RANDOM_SAMPLE": "Muestra seleccionada al azar",
-    "INF_RAND_SAMPLE": "Seleccionar páginas web aleatorias de muestra; seleccionar el 10% de la muestra estructurada seleccionada anteriormente. Para más información, ver <a href={{link_em_3b}}>WCAG-EM Paso 3.b: Incluir una muestra seleccionada aleatoriamente </a>.<br> Nota: Las 'páginas web' incluyen diferentes 'estados de páginas web'; véase la definición de <a href={{link_em_state}}>estados de páginas web</a>.",
-    "RAND_SAMPLE_LENGTH": "Basándose en su muestra estructurada de {{total}} páginas web, eligió al menos {{conteo}} páginas web seleccionadas aleatoriamente(para cumplir con el requisito del 10% en WCAG-EM)",
+    "INF_RAND_SAMPLE": "Seleccione, al menos, un 10% de páginas web aleatorias en la muestra. En el tercer apartado del anexo I de la <a href=&quot;https://eur-lex.europa.eu/legal-content/ES/ALL/?uri=CELEX:32018D1524&quot;>Decisión de Ejecución (UE) 2018/1524</a> se exige que al menos, un 10% de las páginas de la muestra sean aleatorias. Para más información vaya a <a href={{link_em_3b}}>WCAG-EM Paso 3.b: Incluir una muestra seleccionada aleatoriamente </a>.<br><strong>Nota:</strong> Las 'páginas web' incluyen diferentes 'estados de páginas web'; véase la definición de <a href={{link_em_state}}>estados de páginas web</a>.",
+    "RAND_SAMPLE_LENGTH": "Basándose en su muestra estructurada de {{total}} páginas web, debe añadir, al menos, {{count}} páginas web seleccionadas aleatoriamente (para cumplir con el requisito de ese 10% (Decisión de Ejecución (UE) 2018/1524).",
     "LABEL_HANDLE": "Nombre corto",
     "LABEL_PAGE": "Dirección (URL) o descripción",
     "NO_PAGES_DEFINED": "No hay páginas definidas para esta lista",
@@ -16,7 +16,7 @@
     "PLH_TITLE": "Identificador para la página web",
     "PLH_PAGE_URL": "Dirección (URL) o descripción de cómo llegar",
     "BTN_ADD_PAGE": "Añadir página web",
-    "BTN_REMOVE_PAGE": "Quitar página",
+    "BTN_REMOVE_PAGE": "Eliminar página web",
     "STRUCTURED_PAGE": "Página estructurada",
     "RANDOM_PAGE": "Página aleatoria",
     "SAMPLE_PAGE": "Página de muestra"
