--- a/wcagem-tool/wcag-em-report-tool/app/locale/ES/common.json
+++ b/wcagem-tool/wcag-em-report-tool/app/locale/ES/common.json
@@ -12,5 +12,5 @@
     "TO_TOP": "Volver al principio",
     "ACTIVE": "Activo",
     "FOOTER_OAW_COPYRIGHT": "Observatorio de Accesibilidad Web - Ministerio de Asuntos Económicos y Transformación Digital · Secretaría General de Administración Digital",
-    "FOOTER_OAW_BASED": "Basado en la <a href={{url1}}>herramienta de reporte</a> del <a href={{url2}}>W3C</a> y de la iniciativa <a href={{url3}}>WAI</a>"
+    "FOOTER_OAW_BASED": "Basado en la <a href={{url1}} hreflang='en' title='herramienta de reporte (abre en nueva ventana)'>herramienta de reporte</a> del <a href={{url2}} hreflang='en' title='W3C (abre en nueva ventana)'>W3C</a> y de la iniciativa <a href={{url3}} hreflang='en' title='WAI (abre en nueva ventana)'>WAI</a>"
 }
