Status observatory add extra info threshold seeds
Former-commit-id: ef3aa300e272773db3da4dbef4eb65a2e0fd374c

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -2750,6 +2750,7 @@ observatory.status.notes.title                                                = 
 observatory.status.pending.caption                                            = Informaci\u00F3n de portales sin analizar a\u00FAn
 observatory.status.pending.name                                               = Nombre\n
 observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
+observatory.status.percent.threshold                                          = Porcentaje de p\u00E1ginas analizadas respecto a la complejidad de la semilla
 observatory.status.relaunh                                                    = Relanzar esta iteraci\u00F3n del observarorio
 observatory.status.results                                                    = Resultados
 observatory.status.status                                                     = Estado
