--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2542,22 +2542,22 @@ observatory.graphics.level.AA                                                 = 
 observatory.graphics.level.NV                                                 = No V\u00E1lido
 observatory.graphics.level.Parcial                                            = No V\u00E1lido
 observatory.servicio.diagnostico.url                                          = http://administracionelectronica.gob.es/comunidades/accesibilidad
-
 observatory.status.less.threshold.caption                                     = Informaci\u00F3n de an\u00E1lisis por debajo del umbral
 observatory.status.less.threshold.title                                       = Portales por debajo del umbral
 observatory.status.no.results.caption                                         = Informaci\u00F3n de an\u00E1lisis sin resultados
-observatory.stop.info                                                         = <strong>IMPORTANTE</strong> Esta operaci\u00F3n detendr\u00E1 la ejecuci\u00F3n del observatorio y para continuar con ella, deber\u00E1 ejecutar el relanzmiento de forma manual. \n<p>No se eliminar\u00E1 ning\u00FAn an\u00E1lisis previo a esta operaci\u00F3n.</p>
-observatory.stop.question                                                     = \u00BFEst\u00E1 seguro que desea parar la ejecuci\u00F3n del observatorio?
-observatory.stop.success.message                                              = Detenci\u00F3n de la ejecuci\u00F3n de la iteraci\u00F3n del observatorio realizada con \u00E9xito
-observatory.stop.title                                                        = Detener la ejecuci\u00F3n del observatorio
 observatory.status.no.results.title                                           = Semillas procesadas sin resultados
 observatory.status.notes.info                                                 = Semillas procesadas = Semillas procesadas CON resultados + Semillas procesadas SIN resultados
 observatory.status.notes.info2                                                = Cuando se a\u00F1ade una semilla manualmente durante la ejecuci\u00F3n de la iteraci\u00F3n o una vez finalizada la iteraci\u00F3n, se a\u00F1ade a la tabla de "Semillas procesadas sin resultados"; desde esta tabla se puede lanzar/ejecutar la semilla a\u00F1adida.
 observatory.status.notes.running                                              = Total semillas = Semilas procesadas + Semillas sin procesar a\u00FAn
 observatory.status.notes.title                                                = Notas:
 observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
+observatory.status.percent.threshold                                          = Porcentaje de p\u00E1ginas analizadas respecto a la complejidad de la semilla
 observatory.status.summary.seed.processed                                     = Semillas procesadas
 observatory.status.summary.seed.results                                       = Semillas procesadas con resultados
+observatory.stop.info                                                         = <strong>IMPORTANTE</strong> Esta operaci\u00F3n detendr\u00E1 la ejecuci\u00F3n del observatorio y para continuar con ella, deber\u00E1 ejecutar el relanzmiento de forma manual. \n<p>No se eliminar\u00E1 ning\u00FAn an\u00E1lisis previo a esta operaci\u00F3n.</p>
+observatory.stop.question                                                     = \u00BFEst\u00E1 seguro que desea parar la ejecuci\u00F3n del observatorio?
+observatory.stop.success.message                                              = Detenci\u00F3n de la ejecuci\u00F3n de la iteraci\u00F3n del observatorio realizada con \u00E9xito
+observatory.stop.title                                                        = Detener la ejecuci\u00F3n del observatorio
 
 pagina.error   = Error
 pagina.exito   = \u00C9xito
