--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2543,7 +2543,7 @@ observatory.graphics.level.NV                                                 = 
 observatory.graphics.level.Parcial                                            = No V\u00E1lido
 observatory.servicio.diagnostico.url                                          = http://administracionelectronica.gob.es/comunidades/accesibilidad
 observatory.status.less.threshold.caption                                     = Informaci\u00F3n de an\u00E1lisis por debajo del umbral
-observatory.status.less.threshold.title                                       = Portales por debajo del umbral
+observatory.status.less.threshold.title                                       = Semillas procesadas por debajo del umbral
 observatory.status.no.results.caption                                         = Informaci\u00F3n de an\u00E1lisis sin resultados
 observatory.status.no.results.title                                           = Semillas procesadas sin resultados
 observatory.status.notes.info                                                 = Semillas procesadas = Semillas procesadas CON resultados + Semillas procesadas SIN resultados
