--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -2736,7 +2736,7 @@ observatory.status.last.total.url.analized                                    = 
 observatory.status.last.total.url.last                                        = \u00DAltima URL analizada
 observatory.status.last.total.url.last.end                                    = Fin \u00FAltima URL analizada
 observatory.status.less.threshold.caption                                     = Informaci\u00F3n de an\u00E1lisis por debajo del umbral
-observatory.status.less.threshold.title                                       = Portales por debajo del umbral
+observatory.status.less.threshold.title                                       = Semillas procesadas por debajo del umbral
 observatory.status.no.results.caption                                         = Informaci\u00F3n de an\u00E1lisis sin resultados
 observatory.status.no.results.name                                            = Nombre
 observatory.status.no.results.relaunch                                        = Relanzar
