--- a/wcagemtool/app/locale/ES/common.json
+++ b/wcagemtool/app/locale/ES/common.json
@@ -1,7 +1,7 @@
 {
-    "BROWSER_NOT_SUPPORTED": "El navegador que está usando no soporta algunas funciones, como guardar y cargar informes. Puede seguir utilizando la Herramienta de informes con una funcionalidad limitada. Actualice o utilice un navegador web diferente para utilizar todas las funciones de esta herramienta de informes.",
-    "WARNING_BEFORE_UNLOAD": "Los datos que introdujo no se guardan automáticamente. Se perderán si cierras esta ventana del navegador. Utilice el enlace 'Guardar' (Ctrl + S o ⌘ S) que se encuentra en la parte superior de todas las páginas para guardar sus datos en un archivo localmente en su ordenador, y volver a cargarlo más tarde para seguir trabajando en él.",
-    "MORE_INFO": "Para más información, véase <a href={{url}}>{{name}}</a>.",
+    "BROWSER_NOT_SUPPORTED": "El navegador que está usando no soporta algunas funciones, como guardar y cargar informes. Podrá seguir utilizando la Herramienta de generación de informes de accesibilidad pero con una funcionalidad limitada. Actualice su navegador web o utilice uno diferente para poder utilizar todas las funcionalidades de esta herramienta.",
+    "WARNING_BEFORE_UNLOAD": "Los datos que ha introducido no se guardan de manera automática. Si cierra esta ventana del navegador se perderán. Utilice el enlace 'Guardar' (Ctrl + S o ⌘ S) que se encuentra en la parte superior de todas las páginas para guardar sus datos en un archivo local (en su ordenador), y así, continuar más tarde. Para ello, cuando quiera seguir trabajando, deberá pinchar en el enlace 'Abrir' y seleccionar el archivo para volver a cargarlo.",
+    "MORE_INFO": "Para más información, véase <a hreflang='en' href={{url}}>{{name}}</a>.",
     "HIDE_MESSAGE": "Ocultar mensaje",
     "BTN_INFO": "Información expandida",
     "BTN_CLOSE_INFO": "Cerrar información",
@@ -12,5 +12,5 @@
     "TO_TOP": "Volver al principio",
     "ACTIVE": "Activo",
     "FOOTER_OAW_COPYRIGHT": "Observatorio de Accesibilidad Web - Ministerio de Asuntos Económicos y Transformación Digital · Secretaría General de Administración Digital",
-    "FOOTER_OAW_BASED": "Basado en la <a href={{url1}}>herramienta de reporte</a> del <a href={{url2}}>W3C</a> y de la iniciativa <a href={{url3}}>WAI</a>"
+    "FOOTER_OAW_BASED": "Basado en la <a href={{url1}} hreflang='en' title='herramienta de reporte (abre en nueva ventana)'>herramienta de reporte</a> del <a href={{url2}} hreflang='en' title='W3C (abre en nueva ventana)'>W3C</a> y de la iniciativa <a href={{url3}} hreflang='en' title='WAI (abre en nueva ventana)'>WAI</a>"
 }
