--- a/wcagemtool/app/locale/ES/nav.json
+++ b/wcagemtool/app/locale/ES/nav.json
@@ -8,18 +8,18 @@
     "MENU_SAVE_TITLE": "Ctrl + S o ⌘ S",
     "MENU_RESOURCES": "Recursos",
     "MENU_LANGUAGE": "Idioma",
-    "WZRD_LABEL": "Pasos de evaluación",
+    "WZRD_LABEL": "Pasos de la Revisión",
     "WZRD_START": "Inicio",
     "WZRD_SCOPE": "1. Definir el alcance",
     "WZRD_EXPLORE": "2. Explorar el sitio web",
     "WZRD_SAMPLE": "3. Seleccionar muestra",
-    "WZRD_AUDIT": "4. Muestra de auditoría",
+    "WZRD_AUDIT": "4. Auditoría de la Muestra",
     "WZRD_REPORT": "5. Informe",
     "WZRD_ACTIVE": "Activo",
     "WZRD_VIEWREPORT": " Ver Informe",
     "PREV_STEP": "Paso previo",
     "NEXT_STEP": "Próximo paso",
-    "STEP_START": "Start",
+    "STEP_START": "Iniciar",
     "STEP_SCOPE": "Definir el alcance",
     "STEP_EXPLORE": "Explorar el sitio web",
     "STEP_SAMPLE": "Seleccionar muestra",
