--- a/wcagem-tool/wcag-em-report-tool/app/locale/EN/scope.json
+++ b/wcagem-tool/wcag-em-report-tool/app/locale/EN/scope.json
@@ -21,5 +21,56 @@
     "INF_EXTRA_REQUIREMENTS_LI0": "'The report will include a list of all errors identified by the evaluator, rather than examples only'",
     "INF_EXTRA_REQUIREMENTS_LI1": "'The report will include a description of the problem and repair suggestions for any errors listed'",
     "INF_EXTRA_REQUIREMENTS_LI2": "'The evaluation will cover all web pages and web content of the website, rather than a selected sample only'",
-    "INF_EXTRA_REQUIREMENTS_1": "WCAG-EM Step 1.d: Define Additional Evaluation Requirements"
+    "INF_EXTRA_REQUIREMENTS_1": "WCAG-EM Step 1.d: Define Additional Evaluation Requirements",
+    "URA_NAME_LABEL": "Name of the URA",
+    "URA_NAME_INFO": "URA: Accessibility Unit",
+    "URA_DIR3_LABEL": "DIR3 of the URA",
+    "URA_DIR3_INFO": "DIR3: Common Directory of Organic Units and Offices In the following link of the Electronic Administration Portal, it is indicated how to access the DIR3-Common Directory application where you can search for the DIR3 codes needed to fill in this report. https://administracionelectronica.gob.es/ctt/dir3",
+    "URA_SCOPE_LABEL": "Scope of competence of the URA",
+    "URA_SCOPE_INFO": "In general terms, in the National Government, the scope of the URAs will be the Ministry in question, in the Autonomous Regions, the scope of the URAs will be the Autonomous Region in question and in the EELL and other obliged bodies, the scope of the URAs will be in accordance with how the URAs have been defined in accordance with their own organisational characteristics. ",
+    "URA_SCOPE_DIR3_LABEL": "DIR3 from the URA's area of competence",
+    "URA_SCOPE_DIR3_INFO": "Indicate the DIR3 code of the URA's field of competence by indicating it in the previous field",
+    "RESPONSIVE_ENTIY_LABEL": "Entity responsible for the Website",
+    "RESPONSIVE_ENTIY_INFO": "Indicate the name of the Entity responsible for the website, e.g. the Sub-Directorate General XXX",
+    "RESPONSIVE_ENTIY_DIR3_LABEL": "DIR3 of the Entity responsible",
+    "RESPONSIVE_ENTIY_DIR3_INFO": "Indicate the code DIR3 of the Entity responsible for the Website indicated in the previous field",
+    "RESPONSIVE_PERSON_LABEL": "E-mail address of the Entity/Person responsible for the Website",
+    "RESPONSIVE_PERSON_INFO": "Indicate the contact e-mail address of the entity or person responsible for the website",
+    "TYPOLOGY_LABEL": "Typology",
+    "TYPOLOGY_INFO": "",
+    "TYPO1": "Mostly static",
+    "TYPO2": "Electronic Service",
+    "BASIC_FUNCTIONALITY_LABEL": "Essential functionality of the website",
+    "BASIC_FUNCTIONALITY_INFO": "You can use this field to make notes on the essential functionality of the website. Examples of essential functionality include:<ul>>complete and submit a form provided on the website</li>>register for an account on the website</li>> For more information, see <a href={{link_em_2b}} hreflang='en' title='WCAG-EM Step 2. b: Identify the essential functionality of the website (opens in new window)'>WCAG-EM Step 2.b: Identify the essential functionality of the website</a>.",
+    "REVISION_DATE_LABEL": "Date of revision",
+    "REVISION_DATE_INFO": "Indicate the date when the accessibility review is carried out",
+    "TERRITORIAL_SCOPE_LABEL": "Territorial scope",
+    "TERRITORIAL_SCOPE_INFO": "",
+    "THEMATIC_SCOPE_LABEL": "Thematic area",
+    "THEMATIC_SCOPE_INFO": "The thematic areas shown below are those indicated in the implementing decision 2018/1524",
+    "TERRITORIAL_AGE": "AGE",
+    "TERRITORIAL_CCAA": "CCAA",
+    "TERRITORIAL_EELL": "EELL",
+    "TERRITORIAL_OTHERS": "Others",
+    "THEMATIC_1": "Education",
+    "THEMATIC_2": "Employment",
+    "THEMATIC_3": "Treasury",
+    "THEMATIC_4": "Environment",
+    "THEMATIC_5": "Leisure and Culture",
+    "THEMATIC_6": "Social Protection",
+    "THEMATIC_7": "Health",
+    "THEMATIC_8": "Security and Public Order",
+    "THEMATIC_9": "Community Services",
+    "THEMATIC_10": "Transport",
+    "THEMATIC_11": "Housing",
+    "LABEL_SITE_URL": "Website URL",
+    "INF_SITE_URL": "Identifies the URL of the website",
+    "EVALUATION_TYPE_1": "Self-assessment with own resources",
+    "EVALUATION_TYPE_2": "Self-evaluation with external resources",
+    "EVALUATION_TYPE_3": "ENAC accredited inspection",
+    "EVALUATION_TYPE_LABEL": "Type of evaluation",
+    "EVALUATION_COMPANY_LABEL": "Company name",
+    "EVALUATION_COMPANY_INFO": "Name of the company that carried out the evaluation",
+    "OBSERVATIONS_LABEL": "Observations",
+    "OBSERVATIONS_LABEL_INFO": "Data related to the review"
 }
