New report fields
Fix ods/xlsx download in IE

Update ods/xlsx templates

--- a/wcagemtool/app/locale/ES/scope.json
+++ b/wcagemtool/app/locale/ES/scope.json
@@ -22,5 +22,57 @@
     "INF_EXTRA_REQUIREMENTS_LI0": "El informe incluirá una lista de todos los errores identificados por el evaluador, en lugar de incluir solo ejemplos.",
     "INF_EXTRA_REQUIREMENTS_LI1": "El informe incluirá una descripción del problema y sugerencias para la resolución de cualquier error mostrado.",
     "INF_EXTRA_REQUIREMENTS_LI2": "La evaluación abarcará todas las páginas web y el contenido del sitio web, en lugar de solo una muestra seleccionada.",
-    "INF_EXTRA_REQUIREMENTS_1": "WCAG-EM Paso 1.d: Definir los requisitos de evaluación adicionales"
+    "INF_EXTRA_REQUIREMENTS_1": "WCAG-EM Paso 1.d: Definir los requisitos de evaluación adicionales",
+    "URA_NAME_LABEL": "Nombre de la URA",
+    "URA_NAME_INFO": "URA: Unidad Responsable de Accesibilidad",
+    "URA_DIR3_LABEL": "DIR3 de la URA",
+    "URA_DIR3_INFO": "DIR3: Directorio Común de Unidades Orgánicas y Oficinas. En el siguiente enlace del Portal de Administración electrónica, se indica como acceder a la aplicación DIR3-Directorio común donde poder buscar los códigos DIR3 necesarios para rellenar este informe. https://administracionelectronica.gob.es/ctt/dir3",
+    "URA_SCOPE_LABEL": "Ámbito competencial de la URA",
+    "URA_SCOPE_INFO": "En términos generales, en la AGE, el ámbito competencial de las URAs será el Ministerio en cuestión, en las CCAA, el ámbito competencial de las URAs será la CCAA en cuestión y en las EELL y demás organismos obligados, el ámbito competencial de las URAs será de acuerdo a  como hayan definido las URAs conforme a sus propias características organizativas. ",
+    "URA_SCOPE_DIR3_LABEL": "DIR3 del ámbito competencial de la URA",
+    "URA_SCOPE_DIR3_INFO": "Indicar el código DIR3 del ámbito competencial de la URA indicando en el campo anterior.",
+    "RESPONSIVE_ENTIY_LABEL": "Entidad responsable del Sitio web",
+    "RESPONSIVE_ENTIY_INFO": "Indicar el nombre de la Entidad responsable del sitio web, p.e. la Subdirección General XXX.",
+    "RESPONSIVE_ENTIY_DIR3_LABEL": "DIR3 de la Entidad responsable",
+    "RESPONSIVE_ENTIY_DIR3_INFO": "Indicar el código DIR3 de la Entidad responsable del Sitio web indicada en el campo anterior.",
+    "RESPONSIVE_PERSON_LABEL": "Correo electrónico de la Entidad/Persona responsable del Sitio web",
+    "RESPONSIVE_PERSON_INFO": "Indicar el correo electrónico de contacto de la entidad o de la persona responsable del sitio web.",
+    "TYPOLOGY_LABEL": "Tipología",
+    "TYPOLOGY_INFO": "",
+    "TYPO1": "Mayoritariamente estáctico",
+    "TYPO2": "Servicio electrónico",
+    "BASIC_FUNCTIONALITY_LABEL": "Funcionalidad esencial del sitio web",
+    "BASIC_FUNCTIONALITY_INFO": "Puede utilizar este campo para tomar notas sobre la funcionalidad esencial del sitio web. Ejemplos de funcionalidad esencial incluyen:<ul><li>completar y enviar un formulario proporcionado en el sitio web</li><li>registrarse para una cuenta en el sitio web</li></ul>Para más información, ver <a href={{link_em_2b}} hreflang='en' title='WCAG-EM Paso 2.b: Identificar la funcionalidad esencial del sitio web (abre en nueva ventana)'>WCAG-EM Paso 2.b: Identificar la funcionalidad esencial del sitio web</a>.",
+    "REVISION_DATE_LABEL": "Fecha de la revisión",
+    "REVISION_DATE_INFO": "Indicar la fecha en la que se realiza la revisión de accesibilidad",
+    "TERRITORIAL_SCOPE_LABEL": "Ámbito territorial",
+    "TERRITORIAL_SCOPE_INFO": "",
+    "THEMATIC_SCOPE_LABEL": "Ámbito temático",
+    "THEMATIC_SCOPE_INFO": "Los ámbitos temáticos que se muestran a continuación son los indicados en la Decisión de ejecución 2018/1524",
+    "TERRITORIAL_AGE":"AGE",
+    "TERRITORIAL_CCAA":"CCAA",
+    "TERRITORIAL_EELL":"EELL",
+    "TERRITORIAL_OTHERS":"Otros",
+    "THEMATIC_1": "Educación",
+    "THEMATIC_2": "Empleo",
+    "THEMATIC_3": "Hacienda",
+    "THEMATIC_4": "Medio Ambiente",
+    "THEMATIC_5": "Ocio y Cultura",
+    "THEMATIC_6": "Protección social",
+    "THEMATIC_7": "Sanidad",
+    "THEMATIC_8": "Seguridad y Orden Público",
+    "THEMATIC_9": "Servicios Comunitarios",
+    "THEMATIC_10": "Transporte",
+    "THEMATIC_11": "Vivienda",
+    "LABEL_SITE_URL": "URL del Sitio web",
+    "INF_SITE_URL": "Identifica la URL del sitio web",
+    "EVALUATION_TYPE_1":"Autoevaluación con recursos propios",
+    "EVALUATION_TYPE_2":"Autoevaluación con recursos externos",
+    "EVALUATION_TYPE_3":"Inspección acreditada por ENAC",
+    "EVALUATION_TYPE_LABEL":"Tipo de evaluación",
+    "EVALUATION_COMPANY_LABEL":"Nombre de empresa",
+    "EVALUATION_COMPANY_INFO":"Nombre de la empresa que ha realizado la evaluación",
+    "OBSERVATIONS_LABEL":"Observaciones",
+    "OBSERVATIONS_LABEL_INFO":"Datos relacionados con la revisión"
+
 }
